--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
 @import "nprogress-bootstrap";
 @import "nprogress-turbolinks5";
 @import "timeline";
+@import "quiz";
+@import "ribbon";
 
 .light-blue {color: #49ade5; }
 .red { color: #e5605a;}
@@ -23,6 +25,14 @@
 .gold { color: #e5c55b
 }
 
+
+.nav-bg-color {
+  background: #161616; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#1c1c1c, #262626, #1c1c1c); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#1c1c1c, #262626, #1c1c1c); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#1c1c1c, #262626, #1c1c1c); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#1c1c1c, #262626, #1c1c1c); /* Standard syntax */
+}
 // Box shadow helper
 @mixin BoxShadowHelper($level: 1){
   @if $level == 1 {
