--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
+<nav class="navbar navbar-toggleable-md navbar-inverse nav-bg-color">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -51,6 +51,9 @@
       </li>
   <% end %>
 </nav>
+
+<% unless @no_bar %>
 <ol class="breadcrumb" style="box-shadow: 0px 0px 5px #b4b4b4">
   <%= render_breadcrumbs :separator => "<span class='lead'> » </span>".html_safe %>
 </ol>
+<% end %>
