Bug fixes, small addition to UI and quiz layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,9 +19,8 @@
 @import "ribbon";
 
 .light-blue {color: #49ade5; }
-.red { color: #e5605a;}
-.green-inverse { color: #72e55b}
-.green { color: #93e57e }
+.red { color: #e5605a; }
+.green { color: #79A70A }
 .gold { color: #e5c55b
 }
 
