--- a/app/assets/stylesheets/ribbon.scss
+++ b/app/assets/stylesheets/ribbon.scss
@@ -43,7 +43,7 @@
 }
 
 .banner {
-  width: 80%;
+  width: 71%;
   max-width: 1000px;
   height: auto;
   margin: 40px auto;
@@ -54,7 +54,9 @@
   width: 100%;
   max-width: 1000px;
   height: auto;
-  margin:40px auto;
+  margin: 40px auto;
+  margin-top: 25px;
+  margin-bottom: 20px;
 
   position: relative;
 }
