--- a/app/views/illnesses/_index_timeline_element.html.erb
+++ b/app/views/illnesses/_index_timeline_element.html.erb
@@ -1,5 +1,5 @@
 <li class="<%= timeline(counter) %>">
-  <div class="timeline-badge warning"><i class="fa fa-plus"></i></div>
+  <div class="timeline-badge warning"><i class="<%= icon %>"></i></div>
   <div class="timeline-panel">
     <div class="timeline-body">
       <h6 class="timeline-title lead text-center"><%= link_to illness.name, illness_path(illness) %></h6>
