--- a/app/assets/stylesheets/quiz.scss
+++ b/app/assets/stylesheets/quiz.scss
@@ -6,24 +6,20 @@
 .quiz {
 }
 
-.quiz-container {
-  background-image: linear-gradient(-45deg, #212121 25%, transparent 25%, transparent 50%, #212121 50%, #212121 75%, transparent 75%, transparent);
-  background-size: 25px 25px;
-  padding-bottom: 10px;
-  padding-right: 4px;
-}
-
 .quiz.center-container {
-  #color: #666666;
-  #box-shadow:0 0 0 1px #ebebeb inset, 0 0 0 2px rgba(255,255,255,0.10) inset, 0 8px 0 0 #f5f5f5, 0 8px 8px 1px rgba(0,0,0,.2);
   height: 900px;
-  border-radius: 20px;
-  background: #212121;
+  border-radius: 10px;
+
+  background: #292929; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#292929, #222222); /* Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#292929, #222222); /* For Opera 11.6 to 12.0 */
+  background: -moz-linear-gradient(#292929, #222222); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#292929, #222222); /* Standard syntax */
   padding: 20px;
-  width: 100%;
 }
 
 .quiz.box {
+  box-shadow:0 0 0 1px #414141 inset, 0 0 0 2px rgba(255,255,255, 0.1) inset, 0 8px 0 0 #414141, 0 10px 10px 3px rgba(0, 0, 0, 0.25);
   background: #4b4b4b;
   border-radius: 10px;
   padding: 10px;
