--- a/app/views/illnesses/index.html.erb
+++ b/app/views/illnesses/index.html.erb
@@ -9,16 +9,29 @@
     </div>
   </div>
 
-  <h1 class="lead text-center">Aktivitet</h1>
-  <div class="offset-md-2 col-md-8 bg-faded" style="box-shadow: 0px 0px 5px #b4b4b4">
+  <div class="row">
+    <div class="col-md-6">
+      <h1 class="lead text-center"><span class="fa fa-plus"></span> Seneste nye tilføjelser</h1>
       <div style="padding-top: 0px; padding-bottom: 0px;">
         <ul class="timeline">
           <% for illness in @new_illnesses %>
-            <%= render 'index_timeline_element', illness: illness, counter: @counter %>
+            <%= render 'index_timeline_element', illness: illness, counter: @counter, icon: 'fa fa-plus' %>
             <% @counter += 1 %>
          <% end %>
         </ul>
       </div>
+    </div>
+    <div class="col-md-6">
+      <h1 class="lead text-center"><span class="fa fa-refresh"></span> Seneste opdateringer</h1>
+    <div style="padding-top: 0px; padding-bottom: 0px;">
+      <ul class="timeline">
+        <% for illness in @updated_illnesses %>
+            <%= render 'index_timeline_element', illness: illness, counter: @counter2, icon: 'fa fa-refresh'%>
+            <% @counter2 += 1 %>
+        <% end %>
+      </ul>
+    </div>
+    </div>
   </div>
 <!-- end of row -->
 </div>
