--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -1,5 +1,5 @@
 <!-- Disables Turbolinks for the quiz -->
-<%= content_for(:body_attributes, "data-turbolink='false'") %>
+<%= content_for(:body_attributes, "data-turbolink=false") %>
 
 <script>
     $(document)
@@ -15,51 +15,53 @@
 <div class="row">
 <!-- LEFT SIDE CONTAINER -->
 <div class="col-md-2 p-0">
-  <div class="quiz-container">
-    <div class="banner2 two" style="left: 28px;">
+    <div class="banner2 two" style="left: 25px;">
       <div class="main2">
         <div class="text-center text-white">
-          <span class="fa fa-caret-left fa-2x" style="margin-top: 3px;"></span><br>
+          <span class="fa fa-question fa-2x" style="margin-top: 3px;"></span><br>
             Sidste spørgsmål
         </div>
       </div>
-      <div class="skew r" style="z-index:8; background-color: #6c3625; right: 15px; top: 5px;"></div>
+      <div class="skew r" style="z-index:8; background-color: #6c3625; right: 16px; top: 5px;"></div>
     </div>
     <% if session[:was_answer_correct].nil? %>
-        <div class="quiz box" style="box-shadow: 0 0 4px #161616; margin: 25px; margin-left: 55px;">
+        <div class="" style="margin-left: 50px;">
           <i class="fa fa-play fa-3x light-blue"></i>
           <h2 class="count-title">Sæt i gang!</h2>
           <br>
           <h2 class="count-text"><i>Her kommer dit seneste svar til at stå</i></h2>
         </div>
     <% elsif session[:was_answer_correct] == true %>
-        <div class="quiz box" style="box-shadow: 0 0 4px #161616; margin: 25px; margin-left: 55px;">
-          <i class="fa fa-thumbs-up fa-3x green-inverse"></i>
+        <div class=""  style="margin-left: 50px;">
+          <i class="fa fa-thumbs-up fa-3x green"></i>
           <h2 class="count-title">Rigtigt! :D</h2>
           <br>
           <h2 class="count-text"><b><%= @last_correct.name.html_safe unless @last_correct.try(:name).nil? %></b> var korrekt.</h2>
         </div>
     <% else %>
-        <div class="quiz box" style="box-shadow: 0 0 4px #161616; margin: 25px; margin-left: 55px;">
+        <div class="" style="margin-left: 50px;">
           <i class="fa fa-thumbs-down fa-3x red"></i>
           <h2 class="count-title">Forkert! :(</h2>
           <br>
           <h2 class="count-text">Den rigtige diagnose var <b><%= @last_correct.name.html_safe unless @last_correct.try(:name).nil? %></b></h2>
         </div>
     <% end %>
-    <%= link_to 'reset_game' do %>
-        <center><btn class="btn3d btn btn-warning btn-lg">
-          <span class="fa fa-refresh fa-2x"></span>
-          <br>
-          Reset quiz
-        </btn></center>
-    <% end %>
-  </div>
+
+  <%= link_to 'reset_game' do %>
+    <div class="banner2 two" style="left: 25px;">
+      <div class="main2" style="background: #ee7c1b;">
+        <div class="text-center text-white">
+          <span class="fa fa-refresh fa-2x" style="margin-top: 3px;"></span><br>Restart quiz</div>
+      </div>
+      <div class="skew r" style="z-index:8; background-color: #914d0f; right: 16px; top: 5px;"></div>
+    </div>
+  <% end %>
 </div>
 <!-- END OF LEFT SIDE CONTAINER -->
 
 <!-- CENTER CONTAINER -->
-<div class="col-md-8 quiz center-container rounded-circle">
+<div class="col-md-8 quiz center-container">
+  <div class="grid">
       <div class="banner one" style="padding-bottom: 10px;">
         <div class="bk l">
           <div class="arrow top"></div>
@@ -86,9 +88,7 @@
         <% counter = 1 %>
         <% @illnesses.each do |illness| %>
             <div class="card quiz box rounded text-center">
-              <div class="box">
-                <div class="ribbon"><span>Svar #<%= counter %></span></div>
-              </div>
+              <div class="ribbon"><span>Svar #<%= counter %></span></div>
               <div class="p-2 text-white">
                 <h5 class="lead"><%= illness.name.html_safe unless illness.try(:name).nil? %></h5>
               </div>
@@ -102,24 +102,36 @@
             <% counter += 1 %>
         <% end %>
       </div>
-
+  </div>
 </div>
 <!-- END OF CENTER CONTAINER -->
 
 <!-- SIDE CONTAINER-->
     <div class="col-md-2 quiz side-container text-center text-white">
-        <h1 class="lead text-center">Statistik</h1>
-        <div class="counter quiz box" style="box-shadow: 0 0 4px #161616;">
-          <i class="fa fa-star fa-3x green-inverse"></i>
-          <h2 class="timer count-title count-number" data-to="<%= session[:score] %>"></h2>
-          <p class="count-text  ">Korrekte svar</p>
+      <div class="banner2 two" style="right: 37px;">
+        <div class="main2" style="background: #4c9a7f;">
+          <div class="text-center text-white">
+            <span class="fa fa-area-chart fa-2x" style="margin-top: 3px;"></span><br>
+            Statistik
+          </div>
         </div>
+        <div class="skew l" style="z-index:8; background-color: #33684f; right: 15px; top: 5px;"></div>
+      </div>
+      <div class="card quiz box rounded text-center">
+        <div class="p-2 text-white">
+          <i class="fa fa-star fa-3x green"></i>
+          <h2 class="timer count-title count-number" data-to="<%= session[:score] %>"></h2>
+          <p class="count-text">Korrekte svar</p>
+        </div>
+      </div>
         <br>
-        <div class="counter quiz box" style="box-shadow: 0 0 4px #161616;">
+      <div class="card quiz box rounded text-center">
+        <div class="p-2 text-white">
           <i class="fa fa-times fa-3x red"></i>
           <h2 class="timer count-title count-number" data-to="<%= session[:wrong_answers] %>"></h2>
           <p class="count-text">Forkerte svar</p>
         </div>
+      </div>
     </div>
 <!-- END OF RIGHT SIDE CONTAINER -->
   </div>
