--- a/app/assets/stylesheets/quiz.scss
+++ b/app/assets/stylesheets/quiz.scss
@@ -14,11 +14,37 @@
                   #222222 10px,
                   #222222 25px
   );
-  height: 100%;
+  min-height: 100vh;
+}
+
+.quiz.debug {
+  border-radius: 7px;
+  box-shadow: 2px 2px 5px 3px rgba(0, 0, 0, 0.35) inset;
+  background: #292929; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#292929, #222222); /* Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#292929, #222222); /* For Opera 11.6 to 12.0 */
+  background: -moz-linear-gradient(#2d2d2d 0%, #333333 35%); /* For Firefox 3.6 to 15 */
+  padding: 15px;
+  margin: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.quiz.debug:before {
+  content: '';
+  position: absolute;
+  border-radius: 7px;
+  top: 0;
+  right: 15px;
+  bottom: 0;
+  left: 15px;
+  box-shadow: 0.5px 0.5px 1px 0px rgba(207, 241, 255, 0.25) inset;
+  margin: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .quiz.center-container {
-  height: 900px;
   border-radius: 10px;
   box-shadow: 2px 2px 5px 3px rgba(0, 0, 0, 0.35) inset;
 
@@ -27,6 +53,7 @@
   background: -o-linear-gradient(#292929, #222222); /* For Opera 11.6 to 12.0 */
   background: -moz-linear-gradient(#2d2d2d 0%, #333333 35%); /* For Firefox 3.6 to 15 */
   padding: 20px;
+  min-height: 65vh;
 }
 
 .quiz.center-container:before {
