--- a/app/assets/stylesheets/ribbon.scss
+++ b/app/assets/stylesheets/ribbon.scss
@@ -18,11 +18,11 @@
 }
 
 .one > div {
-  height: 84px;
+  min-height: 84px;
 }
 
 .two > div {
-  height: 74px;
+  min-height: 74px;
 }
 
 .main {
@@ -133,6 +133,11 @@
   padding-top: 15px;
   padding-bottom: 15px;
   box-shadow: inset 1px 4px 9px -6px;
+  border-radius: 10px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+
+  box-shadow: 0px 0px 4px 4px rgba(0,0,0, 0.25)
 }
 
 .r .bottom {
