--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -1,3 +1,9 @@
+<script>
+    $('#answer').click(function(e){
+        e.preventDefault();
+    });
+</script>
+
 <!-- Disables Turbolinks for the quiz -->
 <%= content_for(:body_attributes, "data-turbolink=false") %>
 <div class="container-fluid quiz containerz">
@@ -9,7 +15,7 @@
       <div class="main2">
         <div class="text-center text-white">
           <span class="fa fa-question fa-2x" style="margin-top: 3px;"></span><br>
-            Sidste spørgsmål
+            Dit sidste spørgsmål var
         </div>
       </div>
       <div class="skew r" style="z-index:8; background-color: #6c3625; right: 16px; top: 5px;"></div>
@@ -51,7 +57,6 @@
 
 <!-- CENTER CONTAINER -->
 <div class="col-md-8 quiz center-container">
-  <div class="grid">
       <div class="banner one" style="padding-bottom: 10px;">
         <div class="bk l">
           <div class="arrow top"></div>
@@ -68,7 +73,7 @@
           <div class="arrow top"></div>
           <div class="arrow bottom"></div>
         </div>
-        <div class="paper" style="height: 100%;">
+        <div class="paper">
           <p><%= @case.content.html_safe unless @case.content.nil? %></p>
         </div>
       </div>
@@ -80,10 +85,10 @@
             <div class="card quiz box rounded text-center">
               <div class="ribbon"><span>Svar #<%= counter %></span></div>
               <div class="p-2 text-white">
-                <h5 class="lead"><%= illness.name.html_safe unless illness.try(:name).nil? %></h5>
+                <h5 class="lead"><br><%= illness.name.html_safe unless illness.try(:name).nil? %></h5>
               </div>
               <div class="">
-                <%= link_to(action: 'check_answer', answer: illness) do %>
+                <%= link_to action: 'check_answer', answer: illness do %>
                     <div type="button" class="btn btn-success btn btn3d pull-left"><span class="fa fa-check"></span>
                     </div>
                 <% end %>
@@ -92,7 +97,6 @@
             <% counter += 1 %>
         <% end %>
       </div>
-  </div>
 </div>
 <!-- END OF CENTER CONTAINER -->
 
@@ -125,11 +129,19 @@
     </div>
 <!-- END OF RIGHT SIDE CONTAINER -->
   </div>
-</div>
-<% if user_signed_in? %>
-  <h5>Debug:</h5>
+
+
+  <% if user_signed_in? %>
+  <div class="row">
+    <div class="offset-md-2 col-md-8">
+    <div class="quiz debug text-white">
+    <h5>Debug:</h5>
     <% session.each do |key, value| %>
-      <br><%= key.to_s %> =>
-      <%= value.to_s %>
-   <% end %>
-<% end %>
+    <br><%= key.to_s %> =>
+        <%= value.to_s %>
+    <% end %>
+      </div>
+  </div>
+  </div>
+  <% end %>
+</div>
